# CTet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.rc
include/ctet/: active-piece.h  autoshift.h  ctet.h  engine.h  field.h  hold-queue.h  lockdown.h  next-queue.h  piece-data.h  piece.h
shader/dx/: pixel.hlsl  vertex.hlsl
src/: main.c
src/game/: engine.c  engine.h  game.c  game.h
src/game/behavior/: autoshift.c  behavior.h  gravity.c  gravity.h  lockdown.c  lockdown.h  wallkick.c
src/game/component/: active-piece.c  active-piece.h  autoshift.h  block.c  block.h  component.h  field.c  field.h  gravity.c  gravity.h  hold-queue.c  hold-queue.h  lockdown.c  lockdown.h  next-queue.c  next-queue.h  piece.c  piece.h  wallkick.c  wallkick.h
src/game/data/: data.h  piece-data.c  piece-data.h
src/game/engine/: engine.c  engine.h  rendering.c  rendering.h
src/game/engine/component/: active-piece.c  active-piece.h  autoshift.c  block.c  block.h  field.c  field.h  gravity.c  gravity.h  hold-queue.c  hold-queue.h  lockdown.c  lockdown.h  next-queue.c  next-queue.h  piece.c  piece.h  wallkick.c  wallkick.h
src/game/engine/data/: piece-data.c  piece-data.h
src/math/: math.h  point.c  point.h  prng.c  prng.h  quick-math.h
src/platform/: log.h  window.h
src/platform/gfx/directx/: CMakeLists.txt  directx-renderer.cpp
src/platform/gfx/directx/include/: ctetdx.h
src/platform/platform-win/: log-win.c  main-win.c  window-win.c
